tiingo_prep updated function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ export(clarifi_prep)
 export(compute_quantiles)
 export(date_fund_data)
 export(get_constituents)
-export(merge_tiingo_fundamentals)
+export(tiingo_prep)
